5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1828_3183.log
== TEST (2019-06-12 14:26:58) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
for i in v:
	if(i == size(v))
	n[0] = 
	t = zeros(n, dtype=int)
	print(t)
-- ERROR:
File "XXXX", line 4
    if(i == size(v))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:27:04) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
for i in v:
	if(i == size(v)):
	n[0] = 
	t = zeros(n, dtype=int)
	print(t)
-- ERROR:
File "XXXX", line 5
    n[0] = 
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:33:46) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
for i in v:
	v[i:]= n
	t = zeros(n, dtype=int)
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:34:11) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
for i in v:
	n = v[i:]
	t = zeros(n, dtype=int)
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:50) 
-- CODE:
from numpy import*
v = array(eval(input("n: ")))
for i in v:
	if(v[i:]>v[:v])
	aux = t
	terceiro = segundo
	segundo = aux
-- ERROR:
File "XXXX", line 4
    if(v[i:]>v[:v])
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:59) 
-- CODE:
from numpy import*
v = array(eval(input("n: ")))
for i in v:
	if(v[i:]>v[:v]):
		
	aux = t
	terceiro = segundo
	segundo = aux
-- ERROR:
File "XXXX", line 6
    aux = t
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
